--- a/assignment1/requirements.txt
+++ b/assignment1/requirements.txt
@@ -3,7 +3,6 @@ Jinja2==2.8
 MarkupSafe==0.23
 Pillow==3.0.0
 Pygments==2.0.2
-appnope==0.1.0
 argparse==1.2.1
 backports-abc==0.4
 backports.ssl-match-hostname==3.5.0.1
@@ -12,16 +11,8 @@ cycler==0.10.0
 decorator==4.0.6
 future==0.16.0
 gnureadline==6.3.3
-ipykernel==4.2.2
-ipython==4.0.1
-ipython-genutils==0.1.0
-ipywidgets==4.1.1
 jsonschema==2.5.1
-jupyter==1.0.0
-jupyter-client==4.1.1
-jupyter-console==4.0.3
-jupyter-core==4.0.6
-matplotlib==2.0.0
+matplotlib==2.1.1
 mistune==0.7.1
 nbconvert==4.1.0
 nbformat==4.0.1
@@ -43,3 +34,17 @@ six==1.10.0
 terminado==0.5
 tornado==4.3
 traitlets==4.0.0
+appnope==0.1.0
+ipykernel==4.8.0
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.1.1
+jedi==0.11.1
+jupyter==1.0.0
+jupyter-client==5.2.2
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+parso==0.1.1
+prompt-toolkit==1.0.15
+wcwidth==0.1.7
+widgetsnbextension==3.1.3
