--- a/assignment1/requirements.txt
+++ b/assignment1/requirements.txt
@@ -8,7 +8,7 @@ backports-abc==0.4
 backports.ssl-match-hostname==3.5.0.1
 certifi==2015.11.20.1
 cycler==0.10.0
-decorator==4.0.6
+decorator==4.2.1
 future==0.16.0
 gnureadline==6.3.3
 jsonschema==2.5.1
@@ -30,10 +30,10 @@ qtconsole==4.1.1
 scipy==0.16.1
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
-six==1.10.0
+six==1.11.0
 terminado==0.5
 tornado==4.3
-traitlets==4.0.0
+traitlets-4.3.2
 appnope==0.1.0
 ipykernel==4.8.0
 ipython==6.2.1
@@ -41,6 +41,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.1.1
 jedi==0.11.1
 jupyter==1.0.0
+jupyternotify==0.1.15
 jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
