--- a/assignment1/requirements.txt
+++ b/assignment1/requirements.txt
@@ -33,7 +33,7 @@ singledispatch==3.4.0.3
 six==1.11.0
 terminado==0.5
 tornado==4.3
-traitlets-4.3.2
+traitlets==4.3.2
 appnope==0.1.0
 ipykernel==4.8.0
 ipython==6.2.1
