--- a/assignment2/requirements.txt
+++ b/assignment2/requirements.txt
@@ -9,20 +9,22 @@ backports-abc==0.4
 backports.ssl-match-hostname==3.5.0.1
 certifi==2015.11.20.1
 cycler==0.10.0
-decorator==4.0.6
+decorator==4.2.1
 future==0.16.0
 gnureadline==6.3.3
 h5py==2.7.0
-ipykernel==4.2.2
-ipython==4.0.1
-ipython-genutils==0.1.0
-ipywidgets==4.1.1
+ipykernel==4.8.0
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.1.1
+jedi==0.11.1
 jsonschema==2.5.1
 jupyter==1.0.0
-jupyter-client==4.1.1
-jupyter-console==4.0.3
-jupyter-core==4.0.6
-matplotlib==2.0.0
+jupyternotify==0.1.15
+jupyter-client==5.2.2
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+matplotlib==2.1.1
 mistune==0.7.1
 nbconvert==4.1.0
 nbformat==4.0.1
@@ -30,8 +32,10 @@ nltk==3.2.2
 notebook==4.0.6
 numpy==1.12.1
 path.py==8.1.2
+parso==0.1.1
 pexpect==4.0.1
 pickleshare==0.5
+prompt-toolkit==1.0.15
 ptyprocess==0.5
 pyparsing==2.0.7
 python-dateutil==2.4.2
@@ -41,8 +45,9 @@ qtconsole==4.1.1
 scipy==0.19.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
-site==0.0.1
-six==1.10.0
+six==1.11.0
 terminado==0.5
 tornado==4.3
-traitlets==4.0.0
+traitlets==4.3.2
+wcwidth==0.1.7
+widgetsnbextension==3.1.3
