--- a/assignment2/requirements.txt
+++ b/assignment2/requirements.txt
@@ -3,6 +3,7 @@ Jinja2==2.8
 MarkupSafe==0.23
 Pillow==3.0.0
 Pygments==2.0.2
+Send2Trash==1.5.0
 appnope==0.1.0
 argparse==1.2.1
 backports-abc==0.4
@@ -14,25 +15,27 @@ future==0.16.0
 gnureadline==6.3.3
 h5py==2.7.0
 ipykernel==4.8.0
-ipython==6.2.1
 ipython-genutils==0.2.0
+ipython==6.2.1
 ipywidgets==7.1.1
 jedi==0.11.1
-jsonschema==2.5.1
-jupyter==1.0.0
-jupyternotify==0.1.15
+jsonschema==2.6.0
 jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+jupyter==1.0.0
+jupyterlab-launcher==0.10.5
+jupyterlab==0.31.9
+jupyternotify==0.1.15
 matplotlib==2.1.1
 mistune==0.7.1
 nbconvert==4.1.0
 nbformat==4.0.1
 nltk==3.2.2
-notebook==4.0.6
+notebook==5.4.0
 numpy==1.12.1
-path.py==8.1.2
 parso==0.1.1
+path.py==8.1.2
 pexpect==4.0.1
 pickleshare==0.5
 prompt-toolkit==1.0.15
@@ -46,7 +49,7 @@ scipy==0.19.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.11.0
-terminado==0.5
+terminado==0.8.1
 tornado==4.3
 traitlets==4.3.2
 wcwidth==0.1.7
