--- a/assignment3/cs231n/.gitignore
+++ b/assignment3/cs231n/.gitignore
@@ -1,3 +1,8 @@
 build/*
 im2col_cython.c
 im2col_cython.so
+coco_captioning
+squeezenet.ckpt.index
+squeezenet.ckpt.meta
+imagenet_val_25.npz
+squeezenet.ckpt.data-00000-of-00001
