--- a/assignment3/requirements.txt
+++ b/assignment3/requirements.txt
@@ -1,49 +1,78 @@
-Cython==0.25.2
-Jinja2==2.8
-MarkupSafe==0.23
-Pillow==3.0.0
-Pygments==2.0.2
+## The following requirements were added by pip freeze:
+absl-py==0.1.12
 appnope==0.1.0
-argparse==1.2.1
+astor==0.6.2
 backports-abc==0.4
 backports.ssl-match-hostname==3.5.0.1
+bleach==2.1.3
+botocore==1.8.20
 certifi==2015.11.20.1
 cycler==0.10.0
-decorator==4.0.6
+Cython==0.25.2
+decorator==4.2.1
+docutils==0.14
+entrypoints==0.2.3
 future==0.16.0
+gast==0.2.0
 gnureadline==6.3.3
+grpcio==1.10.0
 h5py==2.7.0
-ipykernel==4.2.2
-ipython==4.0.1
-ipython-genutils==0.1.0
-ipywidgets==4.1.1
-jsonschema==2.5.1
+html5lib==1.0.1
+ipykernel==4.8.2
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.1.1
+jedi==0.11.1
+Jinja2==2.10
+jmespath==0.9.3
+jsonschema==2.6.0
 jupyter==1.0.0
-jupyter-client==4.1.1
-jupyter-console==4.0.3
-jupyter-core==4.0.6
-matplotlib==2.0.0
-mistune==0.7.1
-nbconvert==4.1.0
-nbformat==4.0.1
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+jupyterlab==0.31.12
+jupyterlab-launcher==0.10.5
+jupyternotify==0.1.15
+Markdown==2.6.11
+MarkupSafe==1.0
+matplotlib==2.1.1
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
 nltk==3.2.2
-notebook==4.0.6
-numpy==1.12.1
+notebook==5.4.1
+numpy==1.14.2
+pandocfilters==1.4.2
+parso==0.1.1
 path.py==8.1.2
-pexpect==4.0.1
-pickleshare==0.5
-ptyprocess==0.5
+pexpect==4.4.0
+pickleshare==0.7.4
+Pillow==3.0.0
+prompt-toolkit==1.0.15
+protobuf==3.5.2.post1
+ptyprocess==0.5.2
+pyasn1==0.4.2
+Pygments==2.2.0
 pyparsing==2.0.7
-python-dateutil==2.4.2
+python-dateutil==2.7.1
 pytz==2015.7
-pyzmq==15.1.0
+pyzmq==17.0.0
 qtconsole==4.1.1
+rsa==3.4.2
+s3transfer==0.1.12
 scipy==0.19.0
+Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
-site==0.0.1
-six==1.10.0
-terminado==0.5
-tornado==4.3
-traitlets==4.0.0
-h5py==2.7.0
+six==1.11.0
+tensorboard==1.6.0
+tensorflow==1.6.0
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.0.1
+traitlets==4.3.2
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.1.3
