--- a/assignment3/requirements.txt
+++ b/assignment3/requirements.txt
@@ -1,4 +1,3 @@
-## The following requirements were added by pip freeze:
 absl-py==0.1.12
 appnope==0.1.0
 astor==0.6.2
@@ -6,7 +5,8 @@ backports-abc==0.4
 backports.ssl-match-hostname==3.5.0.1
 bleach==2.1.3
 botocore==1.8.20
-certifi==2015.11.20.1
+certifi==2018.4.16
+cffi==1.11.5
 cycler==0.10.0
 Cython==0.25.2
 decorator==4.2.1
@@ -37,21 +37,25 @@ Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.1.1
 mistune==0.8.3
+mkl-fft==1.0.0
+mkl-random==1.0.1
 nbconvert==5.3.1
 nbformat==4.4.0
 nltk==3.2.2
 notebook==5.4.1
 numpy==1.14.2
+olefile==0.45.1
 pandocfilters==1.4.2
 parso==0.1.1
 path.py==8.1.2
 pexpect==4.4.0
 pickleshare==0.7.4
-Pillow==3.0.0
+Pillow==5.1.0
 prompt-toolkit==1.0.15
 protobuf==3.5.2.post1
 ptyprocess==0.5.2
 pyasn1==0.4.2
+pycparser==2.18
 Pygments==2.2.0
 pyparsing==2.0.7
 python-dateutil==2.7.1
@@ -70,6 +74,8 @@ tensorflow==1.6.0
 termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
+torch==0.4.0
+torchvision==0.2.1
 tornado==5.0.1
 traitlets==4.3.2
 wcwidth==0.1.7
